--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,8 @@
             android:requestLegacyExternalStorage="true" >
         <activity android:name=".ProfileActivity">
         </activity>
+        <activity android:name=".BattleActivity">
+        </activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
